force-app/main/default/objects/Apttus_Config2__AttributeValueMatrix__c/Apttus_Config2__AttributeValueMatrix__c.object-meta.xml
<CustomObject>
    <description>Represents the information about attribute value compatibilities or incompatibilities.</description>
    <label>Attribute Value Matrix</label>
    <nameField>
        <label>Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attribute Value Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>