force-app/main/default/objects/Apttus_Config2__AttributeValueMatrix__c/fields/Apttus_Config2__AccountScopeOper__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AccountScopeOper__c</fullName>
    <description>The account scope operator</description>
    <inlineHelpText>The account scope operator</inlineHelpText>
    <label>Account Scope Oper</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>in</fullName>
                <default>true</default>
                <label>in</label>
            </value>
            <value>
                <fullName>not in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>