force-app/main/default/objects/Apttus_Config2__AttributeValueMatrix__c/fields/Apttus_Config2__ApplicationType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ApplicationType__c</fullName>
    <description>How to apply the matrix values to the attributes</description>
    <inlineHelpText>How to apply the matrix values to the attributes</inlineHelpText>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
            <value>
                <fullName>Constrain</fullName>
            </value>
            <value>
                <fullName>Force Set</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>