force-app/main/default/objects/Apttus_Config2__AttributeValueMatrix__c/fields/Apttus_Config2__DefaultProductAttributeScopeId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DefaultProductAttributeScopeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the product attribute group associated with the matrix</description>
    <inlineHelpText>ID of the product attribute group associated with the matrix</inlineHelpText>
    <label>Default Product Attribute Scope</label>
    <referenceTo>Apttus_Config2__ProductAttributeGroup__c</referenceTo>
    <relationshipLabel>Attribute Value Matrices</relationshipLabel>
    <relationshipName>AttributeValueMatrices</relationshipName>
    <type>Lookup</type>
</CustomField>