force-app/main/default/objects/Apttus_Config2__AttributeValueMatrix__c/fields/Apttus_Config2__EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EffectiveDate__c</fullName>
    <description>The matrix effective date. The matrix becomes effective on this date.</description>
    <inlineHelpText>The matrix effective date. The matrix becomes effective on this date.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>