force-app/main/default/objects/Apttus_Config2__AttributeValueMatrix__c/fields/Apttus_Config2__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ExpirationDate__c</fullName>
    <description>The matrix expiration date. The matrix becomes ineffective after this date.</description>
    <inlineHelpText>The matrix expiration date. The matrix becomes ineffective after this date.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>