force-app/main/default/objects/Apttus_Config2__AttributeValueMatrix__c/fields/Apttus_Config2__ProductFamilyScope__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductFamilyScope__c</fullName>
    <description>One or more product families associated with the matrix</description>
    <inlineHelpText>One or more product families associated with the matrix</inlineHelpText>
    <label>Product Family Scope</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>