force-app/main/default/objects/Apttus_Config2__AttributeValueMatrix__c/fields/Apttus_Config2__TreatNullAsWildcard__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TreatNullAsWildcard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating whether to treat null entries as a wildcard</description>
    <inlineHelpText>Flag indicating whether to treat null entries as a wildcard</inlineHelpText>
    <label>Treat Null As Wildcard ?</label>
    <type>Checkbox</type>
</CustomField>